default/objects/E2E_Form_Transit_Settings__c/E2E_Form_Transit_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Form Transit Settings</label>
</CustomObject>