default/objects/E2E_Form_Transit_Settings__c/fields/Allowed_Debt_Sum__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Debt_Sum__c</fullName>
    <label>Allowed Debt Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>