default/objects/E2E_Form_Transit_Settings__c/fields/Article_Oplata_Po_Dogovoru__c.field-meta.xml
<CustomField>
    <fullName>Article_Oplata_Po_Dogovoru__c</fullName>
    <label>Article Oplata Po Dogovoru</label>
    <length>100</length>
    <type>Text</type>
</CustomField>