default/objects/E2E_Form_Transit_Settings__c/fields/Bez_DS__c.field-meta.xml
<CustomField>
    <fullName>Bez_DS__c</fullName>
    <label>Bez DS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>