default/objects/E2E_Form_Transit_Settings__c/fields/Car_Park_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Type__c</fullName>
    <description>Тип автопарка</description>
    <label>Car Park Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>