default/objects/E2E_Form_Transit_Settings__c/fields/Car_Park_Vid__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Vid__c</fullName>
    <description>Вид автопарка</description>
    <label>Car Park Vid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>