default/objects/E2E_Form_Transit_Settings__c/fields/Client_Came_From__c.field-meta.xml
<CustomField>
    <fullName>Client_Came_From__c</fullName>
    <description>Тип канала поиска</description>
    <label>Client Came From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>