default/objects/E2E_Form_Transit_Settings__c/fields/Cont_Rek_Type__c.field-meta.xml
<CustomField>
    <fullName>Cont_Rek_Type__c</fullName>
    <description>Тип реквизитов</description>
    <label>Cont Rek Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>