default/objects/E2E_Form_Transit_Settings__c/fields/Contract_Form__c.field-meta.xml
<CustomField>
    <fullName>Contract_Form__c</fullName>
    <label>Contract Form</label>
    <length>20</length>
    <type>Text</type>
</CustomField>