default/objects/E2E_Form_Transit_Settings__c/fields/Contract_Type_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type_Commerce__c</fullName>
    <description>Тип договора (коммерческая информация)</description>
    <label>Contract Type Commerce</label>
    <length>20</length>
    <type>Text</type>
</CustomField>