default/objects/E2E_Form_Transit_Settings__c/fields/Contract_Type_Fin_Multioffer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type_Fin_Multioffer__c</fullName>
    <label>Contract Type Fin Multioffer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>