default/objects/E2E_Form_Transit_Settings__c/fields/Contract_Type_Service__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type_Service__c</fullName>
    <label>Contract Type Service</label>
    <length>20</length>
    <type>Text</type>
</CustomField>