default/objects/E2E_Form_Transit_Settings__c/fields/Credit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Credit_Percent__c</fullName>
    <label>Credit Percent</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>