default/objects/E2E_Form_Transit_Settings__c/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <label>Credit Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>