default/objects/E2E_Form_Transit_Settings__c/fields/External_Standard_Promos__c.field-meta.xml
<CustomField>
    <fullName>External_Standard_Promos__c</fullName>
    <label>External Standard Promos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>