default/objects/E2E_Form_Transit_Settings__c/fields/Id_Eqv__c.field-meta.xml
<CustomField>
    <fullName>Id_Eqv__c</fullName>
    <label>Id Eqv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>