default/objects/E2E_Form_Transit_Settings__c/fields/Internal_Client__c.field-meta.xml
<CustomField>
    <fullName>Internal_Client__c</fullName>
    <label>Internal Client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>