default/objects/E2E_Form_Transit_Settings__c/fields/Lgotniy_Period__c.field-meta.xml
<CustomField>
    <fullName>Lgotniy_Period__c</fullName>
    <label>Lgotniy Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>