default/objects/E2E_Form_Transit_Settings__c/fields/Notify_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_By_Email__c</fullName>
    <label>Notify By Email</label>
    <length>20</length>
    <type>Text</type>
</CustomField>