default/objects/E2E_Form_Transit_Settings__c/fields/On_Basis_Svidetelstva__c.field-meta.xml
<CustomField>
    <fullName>On_Basis_Svidetelstva__c</fullName>
    <label>On Basis Svidetelstva</label>
    <length>100</length>
    <type>Text</type>
</CustomField>