default/objects/E2E_Form_Transit_Settings__c/fields/On_Basis_Ustava__c.field-meta.xml
<CustomField>
    <fullName>On_Basis_Ustava__c</fullName>
    <label>On Basis Ustava</label>
    <length>20</length>
    <type>Text</type>
</CustomField>