default/objects/E2E_Form_Transit_Settings__c/fields/Order_Of_Conditions_Change__c.field-meta.xml
<CustomField>
    <fullName>Order_Of_Conditions_Change__c</fullName>
    <label>Order Of Conditions Change</label>
    <length>20</length>
    <type>Text</type>
</CustomField>