default/objects/E2E_Form_Transit_Settings__c/fields/Overdraft_Sum__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Sum__c</fullName>
    <label>Overdraft Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>