default/objects/E2E_Form_Transit_Settings__c/fields/Payment_For_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Payment_For_Overdue__c</fullName>
    <label>Payment For Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>