default/objects/E2E_Form_Transit_Settings__c/fields/Standard_Promos__c.field-meta.xml
<CustomField>
    <fullName>Standard_Promos__c</fullName>
    <label>Standard Promos</label>
    <type>TextArea</type>
</CustomField>