default/objects/E2E_Form_Transit_Settings__c/fields/Type_Peni__c.field-meta.xml
<CustomField>
    <fullName>Type_Peni__c</fullName>
    <label>Type Peni</label>
    <length>100</length>
    <type>Text</type>
</CustomField>