default/objects/E2E_Form_Transit_Settings__c/fields/Usluga_Doveria__c.field-meta.xml
<CustomField>
    <fullName>Usluga_Doveria__c</fullName>
    <label>Usluga Doveria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>