default/objects/E2E_Form_Transit_Settings__c/fields/Value_Peni__c.field-meta.xml
<CustomField>
    <fullName>Value_Peni__c</fullName>
    <label>Value Peni</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>