default/objects/E2E_Form_Transit_Settings__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>